syntax = "proto3";

package orders.v1;

message OrderResponse{
  OrderResponseItem item = 1;
  repeated ValidationError errors = 2;
}

message OrderResponseItem{
  string id = 1;
  string customerId = 2;
  repeated string items = 3;
  int32 status = 4;
  Decimal totalAmount = 5;
}

message Decimal {
  optional uint64 lo = 1; // the first 64 bits of the underlying value
  optional uint32 hi = 2; // the last 32 bis of the underlying value
  optional sint32 signScale = 3; // the number of decimal digits, and the sign
}

message ValidationError {
  string propertyName = 1;
  string errorMessage = 2;
}

message CreateOrderCommand{
  string customerId = 1;
  repeated string items = 2;
  Decimal totalAmount = 3;
}

service OrderCommandProcessor{
  rpc ExecuteCreateAsync(CreateOrderCommand) returns (OrderResponse);
}
